--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/fontawesome.css" />
+    <link rel="stylesheet" href="./assets/fontawesome.css" />
     <link rel="stylesheet" href="./assets/style.css" />
     <title>Colors Project</title>
   </head>
@@ -291,7 +291,7 @@
 
     <!--  -->
     <!-- Scripts -->
-    <script src="assets/fontawesome.js"></script>
+    <script src="./assets/fontawesome.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.1.0/chroma.min.js"
       integrity="sha512-yocoLferfPbcwpCMr8v/B0AB4SWpJlouBwgE0D3ZHaiP1nuu5djZclFEIj9znuqghaZ3tdCMRrreLoM8km+jIQ=="
