--- a/index.html
+++ b/index.html
@@ -282,6 +282,11 @@
           <i class="fa fa-close"></i>
         </button>
         <h4>Pick your Colors</h4>
+        <input
+          type="text"
+          class="search-colors"
+          placeholder="Search Your Library"
+        />
         <div class="libraries"></div>
       </div>
     </div>
